# sigta

./: .gitignore  CMakeLists.txt  README.md
include/sigta/common/: ECS.h  Extras.h  ManagedObjs.h  Meta.h  RTTI.h  RelPtr.h
scripts/: config-debug.sh  config-release.sh
test/: CMakeLists.txt  ECS.cpp  ManagedObjs.cpp  RTTI.cpp  RelPtrTest.cpp  TestCommon.h
